2015-07-09 Martin Grønholdt

* slighttp/http-response.c (http_process_response): Keep processing if there is no response yet.


2015-07-02 Martin Grønholdt

* slighttp/http-response.c: Added http_status_line_204.
*						   (http_send_status_line): Added 204.
* slighttp/http-response.h: Added HTTP_STATUS_204.
* rest/network.c: Added rest_network_put_handler.
* rest/rest.h: Added rest_network_put_handler.
* slighttp/http-commen.*: Added get_header_value.
* slighttp/http-tcp.c (tcp_reconnect_cb): Don't disconnect, everything chrashes.
* slighttp/http-request.c (http_parse_headers): Get message if any.


2015-07-02 Martin Grønholdt

* slighttp/http-response.c (http_process_response): Handle specific method handler missing.


2015-07-01 Martin Grønholdt

* fs/connect/index.html: Status message, and better REST call timer.


2015-06-30 Martin Grønholdt

* debug.c (db_dealloc): Added check for empty entry in the alloc list.
* slighttp/http.h: Upped version.
* response_handlers.h: Added rest_network_head_handler.
* response_handlers.h: Added rest_net_names handlers.
* rest/network.c: Added rest_net_names_head_handler.
*				: Added create_response.
*				 (rest_network): Renamed rest_network_get_handler.
* rest/net-names.c: Added rest_network_head_handler.
*				  : Added create_response.
*				   (rest_net_names): Renamed rest_net_names_get_handler.
* rest/network.h: Added rest_network_head_handler.
* net/tcp (tcp_sent_cb): Check if connection is NULL.


2015-06-29 Martin Grønholdt

* slighttp/http.h (response_states): Added HTTP_STATE_ERROR.


2015-06-27 Martin Grønholdt

* slighttp/http-fs.c (http_fs_test): Added error status code handling.
* slighttp/http-response.c (http_process_response): Handle error status codes.
*						   (fall_through_status_handler): Handle errors when no one else will.

2015-06-24 Martin Grønholdt

* Removed main state machine files.
* net/wifi_connect.* (check_connection): Renamed wifi_check_connection.